--- a/minesweeper.css
+++ b/minesweeper.css
@@ -95,3 +95,12 @@ body {
 	top: 0;
 	left: 192px;
 }
+
+.endgame-stats {
+	border: 2px solid black;
+	width: 250px;
+}
+
+td {
+	border: 1px solid black;
+}
