--- a/minesweeper.css
+++ b/minesweeper.css
@@ -50,6 +50,10 @@ body {
 	font-weight: bold;
 }
 
+.colour-info {
+	margin-bottom: 10px;
+}
+
 .graph {
 	border: 1px solid black;
 	margin: 10px 20px 10px 20px;
